# MemAcc

./: .gitignore  .gitmodules  README.md
include/MemAcc/: CMakeLists.txt  MemAccOps.td
include/MemAcc/Passes/: CMakeLists.txt  MemAccAnalysis.h  MemAccUtils.h  Passes.h  Passes.td
include/polygeist/Passes/: Passes.h
lib/MemAcc/: CMakeLists.txt  Ops.cpp
lib/MemAcc/Passes/: CMakeLists.txt  DummyPass.cpp  MemAccAnalysis.cpp  MemAccGen.cpp  MemAccHoistLoads.cpp  MemAccHoistLoadsLegacy.cpp  MemAccPrefetch.cpp  MemAccToLLVM.cpp  MemAccUtils.cpp  PassDetails.h
lib/polygeist/Passes/: CMakeLists.txt  MemAccGen.cpp
test/: code_gen.sh  lower_to_llvm.sh  maa_lib.c  test.cpp  test_all.sh  test_memacc.mlir  test_memacc.mlir.llvm  test_memacc.mlir.scf  test_pseudo.cpp
test/demo_may_8/: test.cpp  test_all.sh
test/demo_may_8/scripts/: clean.sh  code_gen.sh  lower_to_llvm.sh  memacc_gen.sh
test/end_to_end_test/: complex.cpp  gather.cpp  gather2l.cpp  gather2val.cpp  nested_loop.cpp  nested_loop_dep.cpp  rmw.cpp  scatter.cpp  scatter_2l.cpp  scatter_cond.cpp  test_all.sh
test/test_memacc_analysis/: complex.cpp  gather2l.cpp  gather2val.cpp  rmw.cpp  scatter.cpp  scatter_cond.cpp  test_all.sh
tools/polygeist-opt/: CMakeLists.txt  polygeist-opt.cpp
